2009-05-08  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/placement.jl: interactive placement mode now also for dialogs

	* OPTIONS: updated

2009-05-07  Christopher Bratusek <zanghar@freenet.de>
	* COPYING.SOUNDS: added

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/x-cycle.jl: added cycle-among-groups{,-backwards} [Fernando Carmano Varo]

	* lisp/sawfish/wm/autoload.jl: autoload Tabs-group

	* lisp/sawfish/wm/tabs/tab.jl: Tabbed Windowing Support: Raise Tabs on hover

	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/tab.jl: rename add-to-group to tab-add-to-group

2009-05-06  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.spec.in: don't re-define %{_host} [Ritz]

	* */ChangeLog.pre-1.5.0: remove old ChangeLog files

2009-05-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/window-outline.jl: some fixups for the draft animator [Teika]

2009-05-04  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: - fix the last incomplete AC_DEFINE
			- remove unsed configure flags
			- don't add CFLAGS if non given
			- check for intltool 0.40.0

	* autogen.sh: run intltoolize

	* po/POTFILES.in: updated

	* sawfish.ebuild.in: updated

	* po/LINGUAS: added

	* po/sawfish.pot
	* po/make-pot
	* po/sawfish-xgettext
	* po/update.sh: removed, using intltool instead

	* lisp/sawfish/ui/frame-style.jl: make frame-style string translatable

2009-05-03  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/ui/slot.jl: make defcustoms strings translatable [Alexey I. Froloff]

2009-04-20  Christopher Bratusek <zanghar@freenet.de>
	* src/keys.c: - AltGR is not always Mod5

2009-04-14  Christopher Bratusek <zanghar@freenet.de>
	* src/keys.c : - added AltGR as synonyme for Mod5
	               - make sure we don't mix Super and Hyper [Denis Barbier]

2009-04-05  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl