@@ -136,6 +136,7 @@
 (defgroup match-window "Matched Windows" :layout single :require sawfish.wm.ext.match-window)
 (defgroup tooltips "Tooltips" :group appearance :require sawfish.wm.ext.tooltips)
 (defgroup window-history "History" :group match-window :require sawfish.wm.ext.window-history)
+(defgroup messages "Messages" :group misc :require sawfish.wm.util.prompt)
 (autoload-placement-mode 'first-fit 'sawfish.wm.placement.smart #:for-normal t)
 (autoload-placement-mode 'best-fit 'sawfish.wm.placement.smart #:for-normal t)
 (autoload-placement-mode 'best-fit-group 'sawfish.wm.placement.smart #:for-normal t)
