@@ -94,6 +94,8 @@ To use the old style, put @code{(define-special-variable customize-program "sawf
 @item Added cycle-among-groups(,-backwards) commands (cycle between the most recently used window of groups) [Fernando Carmano Varo]
 
 @item Interactive placement-mode now also for transients [Christopher Bratusek]
+
+@item Improved prompt.jl (allows changing font, fg and bg color) [Sergey I. Sharybi]
 @end itemize
 
 @item Other changes:
