@@ -1,3 +1,6 @@
+2009-05-16  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/util/prompt.jl: improved prompt.jl [Sergey I. Sharybi]
+
 2009-05-08  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/placement.jl: interactive placement mode now also for dialogs
 
